Update headings and add additional content in services/interim.html and services/facility-management.html

--- a/services/facility-management.html
+++ b/services/facility-management.html
@@ -68,23 +68,22 @@
     <img class="brainstorm" src="assets/Facility Management/FM.jpg" alt="brainstorm">
     <div class="expertise">
         <h2>Toutes les expertises du Facility Management</h2>
-        <p>A Simple Way Facility Management pilote les prestataires et
-            sous-traitants sur vos sites et vous permet de :</p>
+        <p>
+            Avec A Simple Way Facility Management, nous prenons les rênes de la gestion de vos prestataires et sous-traitants sur vos sites, offrant une approche intégrée qui libère votre entreprise des contraintes opérationnelles. Notre service vous permet de :
+        </p>
         <ul class="FM">
-            <li>Vous concentrer sur votre métier et vos clients</li>
-            <li>bénéficier de prestations agiles et flexibles en fonction de vos besoins et de vos contraintes,</li>
-            <li>garantir le bien être et la sécurité de vos collaborateurs et des personnes intervenants dans vos locaux,</li>
-            <li>réaliser des économies,</li>
-            <li>transférer les risques à une entreprise dont c’est le métier.</li>
+            <li><strong>Se Concentrer sur le Cœur de Votre Activité : </strong>En déléguant la gestion des services et prestataires, vous pouvez vous consacrer entièrement à votre métier et à vos clients, sans vous soucier des détails logistiques.</li>
+            <li><strong>Flexibilité et Agilité : </strong>Profitez de prestations agiles et flexibles adaptées à vos besoins et contraintes spécifiques, vous offrant la souplesse nécessaire pour évoluer avec votre entreprise.</li>
+            <li><strong>Bien-Être et Sécurité : </strong>Assurez le bien-être et la sécurité de vos collaborateurs ainsi que des intervenants dans vos locaux grâce à des procédures rigoureuses et des normes élevées de qualité.</li>
+            <li><strong>Économies et Maîtrise des Coûts : </strong>Réalisez des économies substantielles en optimisant l'efficacité opérationnelle tout en maintenant la qualité des services. Notre expertise vise à maximiser la rentabilité de vos investissements.</li>
+            <li><strong>Transfert de Risques Expertisé : </strong>Confiez les risques opérationnels à une entreprise spécialisée, libérant ainsi votre organisation des soucis inhérents à la gestion quotidienne</li>
         </ul>
-        <p>Avec sa large palette de savoir-faire métier et d’expertises
-            sectorielles, A Simple Way Facility Management peut prendre en charge tout
-            ou partie des services que vous souhaitez externaliser.</p>
-        <p>Nos équipes pilotent des prestations multiservices ou full-service
-            (FM intégré) dans des environnements nationaux et internationaux.</p>
-        <p>Nous sommes en capacité de piloter les filiales internes A Simple Way pour plus de 85 % des prestations qui nous sont confiées et
-            pilotons les autres prestations en déléguant leur exécution à des
-            partenaires de confiance sélectionnés en fonction de vos besoins spécifiques</p>
+        <p>
+            Avec notre palette étendue de savoir-faire métier et d'expertises sectorielles, A Simple Way Facility Management peut gérer l'intégralité ou une partie des services que vous souhaitez externaliser. Nos équipes compétentes pilotent des prestations multiservices ou full-service (FM intégré) à l'échelle nationale et internationale.
+        </p>
+        <p>
+            Pour plus de 85 % des prestations, nos filiales internes A Simple Way prennent en charge la gestion directe, tandis que pour le reste, nous confions l'exécution à des partenaires de confiance soigneusement sélectionnés en fonction de vos besoins spécifiques. Avec A Simple Way Facility Management, la gestion de vos services devient une expérience fluide, efficace et conforme à vos exigences les plus élevées.
+        </p>
         <img class="FM" src="assets/Facility Management/Contract_multiservice.png" alt="contrat Multiservice/Full FM">
     </div>
     <h2>Nos points Forts</h2>
