--- a/services/interim.html
+++ b/services/interim.html
@@ -125,27 +125,32 @@
     <h2 class="presta">Notre proposition</h2>
     <div class="proposition">
         <div class="wrapper">
-            <h3>Vos Problématiques</h3>
+            <h3><strong>Vos Problématiques</strong></h3>
             <ul>
-                <li>Gestion des collaborateurs</li>
-                <li>Continuité de service</li>
-                <li>Recruter les collaborateurs nécessaires à la réalisation de la prestation</li>
-                <li>Etre force de proposition</li>
-                <li>Réactivité, proximité dans le suivi de la réalisation de la prestation et la gestion des réclamations / demandes</li>
+                <li><strong>Gestion des collaborateurs : </strong>Vous cherchez à optimiser la gestion de vos équipes.</li>
+                <li><strong>Continuité de service : </strong>Assurer une continuité de service sans faille est une priorité.</li>
+                <li><strong>Recrutement : </strong>Le recrutement des collaborateurs nécessaires à la prestation représente un défi.</li>
+                <li><strong>Force de proposition : </strong>Vous attendez une collaboration proactive et des idées innovantes.</li>
+                <li><strong>Réactivité et Proximité</strong>La réactivité et la proximité dans le suivi, ainsi que la gestion des réclamations et des demandes, sont cruciales.</li>
             </ul>
         </div>
         <img src="assets/Interim & Recrutement/echange.png" alt="échange">
         <div class="wrapper">
-            <h3>Nos Solutions</h3>
+            <h3><strong>Nos Solutions</strong></h3>
             <ul>
-                <li>Un cadrage de besoin approfondi sur site </li>
-                <li>Un agent administratif sur site sous la supervision du Facility Manager</li>
-                <li>Le support du bureau régional (supervision, recrutement, …)</li>
-                <li>Notre solution «E-Intérim» offrant automatisation et exactitude de la facturation (sans intervention humaine)</li>
-                <li>Suivi régulier, selon votre choix de fréquence, via des indicateurs de pilotage et de performance ainsi que via des réunions de suivi à convenir.</li>
-                <li>Enquêtes de satisfaction permettant l’amélioration continue de notre prestation</li>
+                <li><strong>Cadrage de besoin approfondie : </strong>Nous réalisons une analyse approfondie de vos besoins sur site pour une compréhension complète.</li>
+                <li><strong>Agent Administratif sur site : </strong>Un agent administratif est déployé sur site sous la supervision du Facility Manager pour une gestion efficace.</li>
+                <li><strong>Support Régional : </strong>Nos bureaux régionaux assurent un support complet, incluant la supervision et le recrutement.</li>
+                <li><strong>Solution "E-Intérim" : </strong>Notre solution automatisée offre une facturation précise sans intervention humaine.</li>
+                <li><strong>Suivi Régulier : </strong>Nous proposons un suivi régulier, adapté à vos préférences, avec des indicateurs de pilotage et de performance, ainsi que des réunions de suivi selon vos besoins.</li>
+                <li><strong>Enquêtes de Satisfaction : </strong>Des enquêtes de satisfaction sont menées pour garantir une amélioration continue de nos prestations.</li>
             </ul>
         </div>
+    </div>
+    <div style="margin: 25px auto; background-color: rgb(230, 230, 230); padding: 25px; border-radius: 15px; width: 60%; height: auto;">
+        <p>
+            Avec A Simple Way, nous comprenons vos défis et proposons des solutions intégrées qui allient expertise opérationnelle, automatisation, et engagement constant envers l'amélioration continue. Faites équipe avec nous pour une gestion simplifiée, une continuité de service inébranlable, et une collaboration proactive.
+        </p>
     </div>
     <div class="barre-de-contact">
         <ul class="CB1">
