--- a/services/offre.html
+++ b/services/offre.html
@@ -71,32 +71,51 @@
         <h2>Une offre de services intégrée et sur mesure</h2>
         <p class="paragraph">
             <img src="assets/offres/woman.png" alt="woman folding a towel">
-            A Simple Way propose des solutions personnalisées, depuis la prise en
-            charge d’un ou plusieurs services spécifiques, jusqu’au pilotage
-            de l’ensemble des services généraux. <br>
-            <br>
-            Nous intervenons dans des dizaines de milliers d’espaces de travail,
-            de vie et de loisirs. Nous les entretenons, les sécurisons, les rendons
-            plus sains, plus chaleureux et plus fonctionnels pour qu’ils offrent
-            une expérience unique à leurs occupants et leurs utilisateurs et pour
-            en faire des actifs de valeur. Permettre aux organisations de se
-            concentrer sur leur cœur d’activités et d’améliorer leurs performances
-            en prenant soin des personnes et de leur environnement est notre raison
-            d’être.
+            A Simple Way, votre partenaire privilégié pour des solutions
+            sur mesure : Que vous ayez besoin de la gestion experte d'un
+            service spécifique ou de la coordination complète de tous vos
+            besoins en services généraux, NOUS SOMMES LA POUR VOUS.
+
+            Imaginez l'impact de notre expertise dans des dizaines de
+            milliers d'espaces de travail, de vie et de loisirs. Nous
+            sommes les architectes de l'entretien, de la sécurité et de
+            l'amélioration, créant des environnements plus sains, plus
+            accueillants et plus fonctionnels. Notre mission est de
+            transformer chaque lieu en un actif de valeur, offrant une
+            expérience unique à ses occupants.
+
+            A Simple Way libère les organisations des tracas opérationnels
+            pour qu'elles se concentrent pleinement sur leur cœur d'activités.
+            En prenant soin des personnes et de leur environnement, nous nous
+            engageons à améliorer les performances de nos clients et à faire de
+            chaque espace un refuge de qualité. Faites le choix de l'excellence
+            avec A Simple Way - là où l'efficacité rencontre l'expérience exceptionnelle.
+
         </p>
     </div>
     <div class="case">
         <h2>Des solutions sur mesure</h2>
         <p class="paragraph">
-            Avec sa large palette de savoir-faire métier et d’expertises sectorielles,
-            ASW peut prendre en charge tout ou partie des services que vous souhaitez
-            externaliser. Ses équipes peuvent délivrer des prestations mono-services,
-            multiservices ou full-service (FM intégré) en fonction de vos besoins, de
-            votre organisation et de vos budgets. <br>
-            <br>
-            ASW effectue en propre plus de 85 % des prestations qui lui sont confiées
-            et pilote les autres prestations en déléguant leur exécution à des partenaires
-            de confiance sélectionnés pour leur qualité de service irréprochable.
+            Avec son éventail impressionnant de compétences métier
+            et d'expertises sectorielles, ASW se positionne en tant
+            que partenaire incontournable pour l'externalisation de
+            vos services. Notre équipe hautement qualifiée est prête
+            à relever tous les défis, que ce soit pour des prestations
+            spécialisées, une gestion polyvalente ou une solution intégrée
+            de Facility Management (FM).
+            <br><br>
+            ASW excelle en réalisant plus de 85 % de ses prestations en
+            interne, assurant ainsi une qualité optimale. Pour les autres
+            services, nous agissons en tant que chef d'orchestre, déléguant
+            leur exécution à des partenaires triés sur le volet, choisis pour
+            leur engagement envers l'excellence.
+            <br><br>
+            Libérez-vous des contraintes opérationnelles et faites confiance
+            à ASW pour personnaliser une solution qui répond à vos besoins,
+            votre structure organisationnelle et votre budget. Choisissez
+            l'excellence, choisissez ASW, votre partenaire de confiance
+            pour l'externalisation de services.
+
             <img src="assets/offres/building.png" alt="building windows wash">
         </p>
         <!-- <span class="eric-soriano">
@@ -114,9 +133,16 @@
             <div>
                 <h3>Propreté & services associés</h3>
                 <p>
-                    Une gamme complète de services de propreté/nettoyage pour tous les types d’environnements. <br>
-                    Le Groupe s’appuie sur des directions spécialisées pour les secteurs à haute spécificité
-                    (agroalimentaire, santé, ultra-propreté, industrie, nucléaire, transports…).
+                    Découvrez notre vaste éventail de services d'entretien
+                    et de nettoyage, conçu pour répondre à tous les besoins,
+                    quelle que soit la nature de votre environnement. Au sein
+                    du Groupe, nous nous distinguons par nos équipes spécialisées
+                    dédiées à des secteurs exigeants tels que l'agroalimentaire,
+                    la santé, l'ultra-propreté, l'industrie, le nucléaire et les
+                    transports. Fiez-vous à notre expertise sectorielle pour une
+                    propreté irréprochable et une performance optimale, adaptée à
+                    chaque spécificité. Avec nous, l'excellence en matière d'hygiène
+                    devient la norme.
                 </p>
             </div>
         </li>
@@ -125,9 +151,18 @@
             <div>
                 <h3>Maintenance Multitechnique management</h3>
                 <p>
-                    Une gamme de prestations et de solutions complémentaires pour assurer la
-                    conduite et la maintenance des installations techniques des bâtiments ainsi
-                    que le suivi et l’optimisation de la consommation énergétique des bâtiments.
+                    Explorez notre gamme étendue de prestations et de solutions
+                    complémentaires, taillées sur mesure pour garantir la gestion
+                    et la maintenance optimales des installations techniques de vos
+                    bâtiments. Notre expertise s'étend également au suivi et à
+                    l'optimisation de la consommation énergétique, assurant ainsi
+                    une performance énergétique maximale pour vos infrastructures.
+                    Avec notre engagement envers l'efficacité opérationnelle et la
+                    durabilité, nous sommes votre partenaire idéal pour assurer le
+                    bon fonctionnement de vos installations tout en maîtrisant et
+                    améliorant l'efficacité énergétique de vos bâtiments. Faites
+                    confiance à notre savoir-faire pour une gestion sans faille et
+                    une utilisation responsable des ressources.
                 </p>
             </div>
         </li>
@@ -136,9 +171,14 @@
             <div>
                 <h3>Sécurité, surveillance & sûreté</h3>
                 <p>
-                    Une gamme très large de services alliant les savoir-faire,
-                    les technologies et le digital pour garantir <br>
-                    l’intégrité des personnes et des biens dans tous les types d’environnements.
+                    Explorez notre vaste éventail de services novateurs, fusionnant
+                    habilement savoir-faire, technologies de pointe et solutions digitales
+                    pour assurer la sécurité inébranlable des personnes et des biens, quel
+                    que soit le contexte environnemental. Notre engagement envers l'intégrité
+                    transcende les limites, offrant une tranquillité d'esprit totale. Avec une
+                    approche intégrée et avant-gardiste, nous relevons les défis de sécurité les
+                    plus complexes, garantissant une protection infaillible dans tous les environnements.
+                    Faites le choix de la sécurité totale avec notre gamme complète de services.
                 </p>
             </div>
         </li>
@@ -147,52 +187,37 @@
             <div>
                 <h3>Accueil & service associés</h3>
                 <p>
-                    En partenariat exclusif avec City One. Accueil en entreprise
-                    et dans les lieux publics – Accueil événementiel.
-                </p>
-            </div>
-        </li>
-        <li>
-            <img src="assets/offres/SpaceManagement.jpg" alt="">
-            <div>
-                <h3>Space management</h3>
-                <p>
-                    — Transformation des environnements de travail <br>
-                    — Aménagement des espaces : bureaux, open space, co-working, brainstorming, espace QVT… <br>
-                    — Gestion des déménagements et des mouvements au sein des entreprises <br>
-                    — Gestion du parc mobilier, déploiement Flex Office
-                </p>
-            </div>
-        </li>
-        <li>
-            <img src="assets/offres/couvert.png" alt="plate">
-            <div>
-                <h3>Restauration</h3>
-                <p>
-                    Une gamme complète de services de restauration : gestion de cantines
-                    d’entreprise, de cafés et de cafétérias, restauration événementielle traiteur.
-                </p>
+                    En collaboration privilégiée avec City One, nous vous proposons
+                    une expérience d'accueil inégalée, que ce soit au sein de votre
+                    entreprise, dans des lieux publics ou lors d'événements d'exception.
+                    Notre partenariat exclusif garantit un service d'accueil haut de gamme,
+                    marqué par la courtoisie, l'efficacité et la sophistication. Faites de
+                    chaque rencontre une expérience mémorable avec notre équipe d'accueil
+                    professionnelle, formée pour surpasser vos attentes, qu'il s'agisse de
+                    créer une atmosphère chaleureuse en entreprise ou d'assurer un accueil
+                    événementiel exceptionnel. Votre satisfaction est notre priorité, et
+                    notre partenariat avec City One reflète notre engagement envers l'excellence.                </p>
             </div>
         </li>
     </ul>
     <h2>Notre politique qualité</h2>
     <div class="qualité">
-        <span>Notre performance repose sur notre capacité à satisfaire nos clients et à développer leurs entreprises. Elle se matérialise par 2 engagements :</span>
+        <span>
+            Notre succès repose sur notre engagement indéfectible à répondre aux attentes
+            de nos clients et à propulser la croissance de leurs entreprises. Deux piliers
+            incarnent cette performance exceptionnelle :
+        </span>
         <ul>
-            <li> <strong>Honorer les exigences contractuelles, atteindre et maintenir les résultats de performance établis.</strong></li>
-            <li> <strong>Mesurer la satisfaction de nos clients et obtenir 90% de taux de recommandation chaque année.</strong></li>
+            <li> <strong>Excellence Contractuelle :</strong>Nous nous engageons à respecter rigoureusement les exigences contractuelles, à atteindre et à maintenir les résultats de performance établis. C'est notre promesse de livrer une prestation qui dépasse les standards.</li>
+            <li> <strong>Satisfaction Client à 90% :</strong>Nous mesurons la satisfaction de nos clients de manière transparente et nous visons un taux de recommandation de 90% chaque année. Cette norme élevée reflète notre dévouement à dépasser les attentes, établissant ainsi une relation de confiance durable.</li>
         </ul>
         <p>
-            Le respect de ces engagements, la motivation de nos équipes et la fiabilité de
-            notre stratégie renforcent la position d'ASW parmi les leaders de son marché.
+            Le respect scrupuleux de ces engagements, la motivation sans faille de nos équipes et la fiabilité de notre stratégie consolident la position d'ASW en tant que leader incontesté de son marché.
             <br><br>
-            Cet objectif d’excellence est décliné dans le projet d’entreprise et dans ses
-            valeurs. Il est partagé à tous les niveaux et par chaque collaborateur qui connaît
-            ses objectifs et sa contribution attendue.
+            Cet objectif d'excellence est profondément ancré dans notre projet d'entreprise et guidé par nos valeurs fondamentales. Chaque collaborateur partage cette vision, comprenant pleinement ses objectifs individuels et sa contribution essentielle.
             <br><br>
-            Notre démarche qualité développe la proximité avec nos clients et nos collaborateurs.
-            Elle facilite la mise en œuvre de processus flexibles et créateurs de valeur au service
-            des missions et des objectifs assignés par nos clients.
+            Notre démarche qualité favorise une proximité accrue avec nos clients et collaborateurs. Elle facilite également la mise en place de processus agiles et créatifs, dédiés à la réalisation des missions et des objectifs fixés par nos clients. Chez ASW, l'excellence est notre norme, et nous nous efforçons constamment de la dépasser.
+
 
         </p>
     </div>
