--- a/services/proprete.html
+++ b/services/proprete.html
@@ -147,21 +147,14 @@
             <img class="title" src="assets/Propreté & services associé/cleaning stairs.jpg" alt="cleaning stairs">
             <div class="expert">
                 <p>
-                    A Simple Way conjugue les savoir-faire
-                    et les expertises d’un leader marocain 
-                    de la propreté et du multi-services. </p>
+                    A Simple Way réunit l'expertise et le savoir-faire d'un leader marocain incontesté dans les domaines de la propreté et des services multiples. Quel que soit le cadre, que ce soit des bureaux, des industries, des centres commerciaux, de vastes espaces publics comme les gares et les aéroports, des hôtels, des établissements de santé, ASW offre une palette exhaustive de services de nettoyage professionnel, parfaitement adaptés aux besoins spécifiques de chaque client.    
+                </p>
                 <p>
-                    Quel que soit l’environnement : bureaux, industries,
-                    centres commerciaux, grandes surfaces, espaces publics
-                    tels que gares et aéroports, hôtels, établissements de
-                    santé, ASW propose une gamme complète de services
-                    de nettoyage professionnel adaptés aux besoins et exigences
-                    de chaque client. A Simple Way propose également une gamme de
-                    services complémentaires à destination des occupants.</p>
+                    Au-delà de nos services de nettoyage de première classe, A Simple Way propose également une gamme étendue de services complémentaires destinés à améliorer le quotidien des occupants. Découvrez ci-dessous un aperçu de notre offre, nos engagements inébranlables en matière de qualité, nos références sectorielles illustrant notre expertise variée, et les raisons convaincantes pour lesquelles vous devriez choisir A Simple Way comme partenaire de confiance.
+                </p>
                 <p>
-                    Découvrez ci-dessous notre offre, nos engagements,
-                    nos références par secteur d’activité et les raisons
-                    de nous choisir.</p>
+                    Explorez avec nous une approche intégrée qui transcende les standards, et découvrez comment A Simple Way peut transformer votre environnement, le rendant non seulement impeccable, mais également plus fonctionnel et agréable. Faites le choix de l'excellence avec A Simple Way.
+                </p>
                 <div class="bar"></div>
             </div>
         </div>
@@ -211,20 +204,18 @@
         <img class="why" src="assets/Propreté & services associé/FDM.png" alt="">
         <div>
             <p class="why">
-                Solution innovante de protection de surface, attirant 
-                et détruisant les agents pathogènes en seulement 15 minutes, 
-                Activ’Protect est efficace contre la COVID-19 (et ses variants) ! 
-                Et ce, pendant 30 jours grâce à son action rémanente.
+                Découvrez Activ’Protect, notre solution de protection de surface révolutionnaire qui attire et élimine les agents pathogènes en seulement 15 minutes, garantissant une protection contre la COVID-19 (et ses variants) pendant 30 jours grâce à son action rémanente.
             </p>
             <ul class="why">
-                <li>
-                    Efficace contre la COVID-19, mais pas seuleument: grâce 
-                </li>
-                <li>Une action rémanente : pour garantir une sécurité durant 30 jours</li>
-                <li>Une solution testée et approuvée : testée sur des bus Keolis, résultats analysés et validés en laboratoire</li>
-                <li>Des garanties scientifiques : solution validée scientifiquement et respectant les normes de désinfection</li>
-                <li>Sans rique et prête à l'emploi : produits à base d'eau sans effet irritant sur la peau</li>
-                <li>Des bénéfices indéniables : allongement de la durée d'efficacité de la désinfection, réduction de l'exposition aux micro-organismes pathogènes, amélioration de la sécurité des usagers...</li>
+                <strong>Caractéristiques clés d'Activ’Protect :</strong>
+                <li><strong>Efficacité Polyvalente : </strong>Non seulement efficace contre la COVID-19, mais également contre une gamme étendue d'agents pathogènes.</li>
+                <li><strong>Action Rémanente : </strong>Assure une protection continue pendant 30 jours, offrant une tranquillité d'esprit à long terme.</li>
+                <li><strong>Validation Scientifique : </strong>Testée sur des bus Keolis, les résultats ont été analysés et validés en laboratoire, garantissant une solution scientifiquement approuvée et conforme aux normes de désinfection.</li>
+                <li><strong>Sécurité Optimale : </strong>À base d'eau, nos produits sont sans risque et prêts à l'emploi, sans effet irritant sur la peau.</li>
+                <strong>Bénéfices d'Activ’Protect :</strong>
+                <li><strong>Prolongement de l'Efficacité : </strong>Augmente la durée d'efficacité de la désinfection.</li>
+                <li><strong>Réduction de l'Exposition :</strong>Diminue l'exposition aux micro-organismes pathogènes.</li>
+                <li><strong>Amélioration de la Sécurité :</strong>Renforce la sécurité des usagers.</li>
             </ul>
         </div>
     </div>
@@ -240,33 +231,16 @@
     <div class="wrapper" id="expertise">
         <img class="why" src="assets/Propreté & services associé/person with phone.jpg" alt="">
         <div>
-            <p class="why">Des équipes de spécialistes par secteur permettant d’apporter l’expertise nécessaire et une réelle valeur ajoutée aux clients :</p>
-            <ul class="why">
-                <li>Santé</li>
-                <li>Ultra-Propreté</li>
-                <li>Industrie</li>
-                <li>Agroalimentaire</li>
-                <li>Centres comerciaux</li>
-                <li>Luxe</li>
-                <li>Transport</li>
-                <li>Nucléaire</li>
-                <li>Habitat</li>
-            </ul>
+            <p class="why">
+                Nos équipes spécialisées par secteur, telles que Santé, Ultra-Propreté, Industrie, Agroalimentaire, Centres commerciaux, Luxe, Transport, Nucléaire, et Habitat, apportent une expertise inégalée et une réelle valeur ajoutée à nos clients.
+            </p>
         </div>
     </div>
     <div class="wrapper" id="innovations">
         <div>
-            <p class="why">Nos innovations sont conçues pour améliorer les conditions de travail de nos collaborateurs, la qualité et l’efficacité de nos services et un meilleur respect de l’environnement :</p>
-            <p class="why">Vous trouverez ci-dessous quelques exemples d’innovations déployées actuellement :</p>
-            <ul class="why">
-                <li>Robots (aspirateurs, laveuses, balayeuses) : améliorent le confort, la productivité de nos agents et la concentration sur des tâches à plus grande valeur ajoutée</li>
-                <li>Lunettes connectées pour la formation des salariés : permettent une meilleure formation de nos salariés en milieu sensible (chambres patients, salles blanches, salles contaminées…)</li>
-                <li>Lunettes connectées : permettent une assistance technique en live et à distance</li>
-                <li>Exosquelettes d’aide au levage : réduisent les troubles musculo-squelettiques, la pénibilité, les accidents de travail</li>
-                <li>BioOrg (produits de nettoyage) : permettent de limiter le développement bactérien</li>
-                <li>Novolyze : amélioration de la nettoyabilité des zones de production par l’utilisation de traceurs fluorescents dans les industries agro-alimentaires</li>
-                <li>One Atalian : plateforme dématérialisée pour un pilotage de la prestation en mode cockpit</li>
-            </ul>
+            <p class="why">
+                En plus d'Activ’Protect, nos innovations visent à améliorer les conditions de travail, la qualité des services, et à promouvoir le respect de l'environnement. Quelques exemples d'innovations en cours d'utilisation incluent des robots pour le nettoyage, des lunettes connectées pour la formation et l'assistance technique, des exosquelettes pour réduire la pénibilité, des produits de nettoyage limitant le développement bactérien, et une plateforme dématérialisée pour le pilotage de la prestation, appelée One Atalian. Chez A Simple Way, l'innovation est au cœur de notre engagement envers l'excellence.
+            </p>
         </div>
         <img class="why" src="assets/Propreté & services associé/light bulb.jpg" alt="">
     </div>
@@ -274,12 +248,11 @@
     <div class="nos-engagements">
         <div class="wrapper">
             <div>
-                <h3>Optimiser les conditions d’accueil des utilisateurs</h3>
+                <h3><strong>Optimisation des conditions d’accueil des utilisateurs</strong></h3>
                 <ul>
-                    <li>Assurer la propreté, l’hygiène et la sécurité sanitaire de vos sites</li>
-                    <li>Rendre vos espaces de travail accueillants et sains pour vos visiteurs et occupants</li>
-                    <li>Contribuer au confort et au bien-être de vos collaborateurs</li>
-                    <li>Maintenir votre patrimoine immobilier en bon état</li>
+                    <li><strong>Propreté, Hygiène, et Sécurité Sanitaire : </strong>Nous garantissons la propreté, l'hygiène, et la sécurité sanitaire de vos sites pour assurer un environnement sain.</li>
+                    <li><strong>Espaces Accueillants et Sains : </strong>Nous créons des espaces de travail accueillants et sains pour vos visiteurs et occupants, contribuant au confort et au bien-être de vos collaborateurs.</li>
+                    <li><strong>Entretien du Patrimoine Immobilier : </strong>Nous veillons à maintenir votre patrimoine immobilier en excellent état, assurant sa longévité.</li>
                 </ul>
             </div>
             <img src="assets/Propreté & services associé/FDM.png" alt="walking in a building">
@@ -287,23 +260,23 @@
         <div class="wrapper">
             <img src="assets/Propreté & services associé/talking on a sofa.jpg" alt="chating on a sofa">
             <div>
-                <h3>Innover pour vous offrir toujours la meilleure qualité de service</h3>
+                <h3><strong>Innovation pour une Qualité de Service Exceptionnelle :</strong></h3>
                 <ul>
-                    <li>Pilotage dématérialisé de la performance</li>
-                    <li>Analyse des expériences usagers par sondages digitaux</li>
-                    <li>Amélioration des services grâce au benchmark groupe, fournisseur et marché</li>
+                    <li><strong>Pilotage Dématérialisé : </strong>Nous utilisons une approche de pilotage dématérialisé pour maximiser la performance.</li>    
+                    <li><strong>Analyse des Expériences Utilisateurs : </strong>Des sondages digitaux permettent une analyse approfondie des expériences des utilisateurs.</li>    
+                    <li><strong>Amélioration Continue : </strong>Nous innovons constamment en nous appuyant sur le benchmarking du groupe, des fournisseurs et du marché.</li>    
                 </ul>
             </div>
         </div>
         <div class="wrapper">
             <div>
-                <h3>Placer la RES au coeur de nos actions</h3>
+                <h3><strong>Responsabilité Environnementale au Cœur de Nos Actions :</strong></h3>
                 <ul>
-                    <li>Utilisation de produits respectueux de l’environnement (Ecolabel, Ecocert)</li>
-                    <li>Mise en œuvre de techniques peu consommatrices d’eau ou d’énergie (nettoyage à l’eau, machines avec système de dilution automatique, microfibres)</li>
-                    <li>Équipement de nos agents avec du matériel ergonomique et sécurisé (chariots motorisés, leviers pour containers poubelle, balais à boule, sac à dos produits…)</li>
-                    <li>Développement des compétences de nos collaborateurs (Talent Review)</li>
-                    <li>Médaille Ecovadis Platinum (top 1% des entreprises du secteur en RSE)</li>
+                    <li><strong>Produits Respectueux de l'Environnement : </strong>Nous privilégions l'utilisation de produits respectueux de l'environnement, tels que ceux arborant l'Ecolabel et l'Ecocert.</li>
+                    <li><strong>Techniques Économes en Ressources : </strong>Nous mettons en œuvre des techniques peu consommatrices d'eau ou d'énergie, comme le nettoyage à l'eau et l'utilisation de machines avec système de dilution automatique.</li>
+                    <li><strong>Formation et Équipement Ergonomique : </strong>Nos agents sont équipés de matériel ergonomique et sécurisé, favorisant un travail efficient et respectueux de l'environnement.</li>
+                    <li><strong>Développement des Compétences : </strong>Nous investissons dans le développement des compétences de nos collaborateurs par le biais de Talent Review.</li>
+                    <li><strong>Médaille Ecovadis Platinum : </strong>Nous avons obtenu la Médaille Ecovadis Platinum, ce qui nous classe parmi le top 1% des entreprises du secteur en termes de responsabilité sociale et environnementale (RSE).</li>
                 </ul>
             </div>
             <img src="assets/Propreté & services associé/green plant.jpg" alt="">
@@ -311,11 +284,12 @@
         <div class="wrapper">
             <img src="assets/Propreté & services associé/smiling girl.jpg" alt="">
             <div>
-                <h3>Optimiser votre temps</h3>
+                <h3><strong>Optimisation de votre temps</strong></h3>
                 <ul>
-                    <li>Gestion des prestations associées avec interlocuteur unique (organisation miroir)</li>
-                    <li>Plateforme de pilotage performance et suivi dématérialisé  avec suivi d’indicateurs (One Atalian, Teleric, Koki)</li>
+                    <li><strong>Gestion Simplifiée : Nous simplifions la gestion des prestations associées en proposant un interlocuteur unique et une organisation miroir.</strong></li>
+                    <li><strong>Plateforme de Pilotage Dématérialisé : </strong>Notre plateforme One Atalian, Teleric, Koki permet un suivi dématérialisé avec des indicateurs de performance en temps réel.</li>
                 </ul>
+                <p>Chez A Simple Way, nous nous engageons à surpasser vos attentes en offrant des services de qualité exceptionnelle, en innovant de manière constante et en plaçant la responsabilité environnementale au cœur de nos actions. Optez pour une gestion efficace et un environnement optimal avec notre expertise.</p>
             </div>
         </div>
     </div>
